# osomli

./: Cargo.toml  README.md
example_soml/: example.soml
src/: interpreter.rs  lexer.rs  main.rs  tokens.rs
