[package]
name = "osomli"
version = "1.0.0"
authors = ["MeztliRA <MeztliRA@gmail.com>"]
description = "A soml interpreter written in rust"
repository = "https://github.com/MeztliRA/osomli"
license = "GPL v3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
titlecase = "1.1.0"